# pism

./: .clang-format  .clang-tidy  .deepsource.toml  .dir-locals.el  .gitconfig  .gitignore  .gitmessage  .mailmap  .pre-commit-config.yaml  .sconsign.dblite  .travis.yml  ACKNOWLEDGE.md  ACKNOWLEDGE.rst  BuildPismIOIntel.sh  BuildPismIOdeb.sh  CHANGES.md  CHANGES.rst  CITATION.cff  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  ChangeLog  CmakePISMonLogin.sh  INSTALL  INSTALL.md  INSTALL.rst  Makefile  NEWS-07.md  README.md  README.rst  SConstruct  VERSION  acknowledgements.html  authorship.html  environment-dev.yml  environment.yml  genindex.html  index.html  (+8 more)
doc/: CMakeLists.txt  COOKBOOK  Doxyfile_html  Doxyfile_tex  Makefile  README  README_COUPLER_SEMANTICS_BUG#15119  README_SVN_IS_BETTER  SConscript  acknowledge.py  browser_bedrough.txt  browser_bombproof.txt  browser_bombproof_enth.txt  browser_pages.txt  browser_vertchange.txt  changes-04-05.md  changes-04-05.rst  changes-05-06.md  changes-05-06.rst  changes-06-07.md  changes-06-07.rst  cheatsheet.tex  citing-pism.bib  config_doc.py  doxybib.bst  doxybib.py  doxyfile_browser  doxyfile_refman  eqns3D.tex  fullbib.tex  funding.csv  funding.py  gripDeltaT.py  ice-bib.bib  ice_bib.bib  icemodelvec2t.rst  igs.bst  initialization-sequence.dot  installation.tex  list_diagnostics.py  (+10 more)
doc/browser/: CMakeLists.txt  Makefile  bedrough.md  bedrough.txt  bombproof_enth.md  bombproof_enth.txt  browser.css  browser_bombproof_enth.txt  coding_style.md  config_doc.py  custom_commands.tex  doxybib.bst  doxybib.dbj  doxybib.py  doxyfile  doxyfile_base  doxyfile_browser  doxyfile_util  howto.md  howto.txt  hydrology.txt  initialization-sequence.dot  list_references.py  mainpage.md  pages.md  pages.txt  petsc.md  pism.sty  sed_script.txt  std_names.html  std_names.md  std_names.txt  util_main.txt  vertchange.md  vertchange.rst
doc/eqns3Deps/: reggridsten.eps
doc/figs/: arrfig.eps  bdrywsitfig.eps  earlycols.eps  floatingcase.eps  fourcases.eps  interfacesegment.eps  molecule.eps  staggridsten.eps  stempbdryfig.eps  tempbdryfig.eps  verticalgrid.eps
doc/forcing/: CMakeLists.txt  data-flow.dot  forcing.tex  pism_forcing.rst  pism_forcing.tex
doc/installation/: CMakeLists.txt  installation.tex  pism_installation.tex
doc/inverse/: CMakeLists.txt  ip_design.tex
doc/manpages/: CMakeLists.txt  README  README.md  pclimate.rst  pgrn.rst  pism.rst  pismr.rst  pisms.rst  pismv.rst  pross.rst
doc/manual/: CMakeLists.txt  getting-started.tex  jako.tex  modeling-marine.tex  modeling-subglacier.tex  pism_manual.tex  practical-usage.tex  simplified-geometry.tex  storglaciaren.tex  validation.tex  verification.tex
doc/old/: README  eqns3D.tex  pism_summary.tex
doc/pismpython/: CMakeLists.txt  conf.py  index.rst  installation.rst  math-definitions.txt  pism-sphinx-macros.tex  python.rst  zbib.rst
doc/pythonlib/: CMakeLists.txt  README.txt  bib.rst  conf.py  index.rst  installation.rst  pism-sphinx-macros.tex  python.rst
doc/sphinx/: .dir-locals.el  CMakeLists.txt  INSTALL.rst  Makefile  acknowledgements.rst  acknowledgments.rst  authorship.py  authorship.rst  conf.py  config_parameters.py  funding.txt  getting-started.rst  global.rst  global.txt  highlevelview.rst  index.rst  index_latex.rst  init-boot.rst  jako.rst  list_diagnostics.py  list_parameters.py  math-definitions.tex  math-definitions.txt  modeling-computational.rst  modeling-dynamics.rst  modeling-marine.rst  modeling-subglacier.rst  pism_config.py  pism_forcing.rst  practical-usage.rst  prologue.rst  publishing.rst  references.rst  simplified-geometry.rst  validation.rst  verification.rst  vertchange.rst  zzz_references.rst  zzz_references_latex.rst
doc/userman/: CMakeLists.txt  Makefile  eismint-greenland.tex  eismint-ross.tex  getting-started.tex  hard-choices.tex  highlevelview.tex  init-boot.tex  jako.tex  manual.tex  modeling-choices.tex  modeling-computational.tex  modeling-dynamics.tex  modeling-marine.tex  modeling-subglacier.tex  pism-pik.tex  practical-usage.tex  ross.tex  simplified-geometry.tex  storglaciaren.tex  validation.tex  verification.tex
doc/verif/: BG_april2013.nc  B_userman_may2012.nc  G_userman_may2012.nc  I_april2013.nc  I_userman_may2012.nc  r1084.nc  test-B-errors.nc  test-B-errors.sh  test-G-errors.nc  test-G-errors.sh  test-I-errors.nc  test-I-errors.sh  test-K-errors.nc  test-K-errors.sh  vfnow_r327_L5_23jun08.txt  vfnow_r589_L5_5mar09.txt
docker/: CMakeLists.txt  test-installation-instructions.sh
docker/archlinux/: CMakeLists.txt  Dockerfile  Dockerfile.in  README.rst
docker/debian/: CMakeLists.txt  Dockerfile.in  README.rst  build_netcdf.sh
docker/debian-spack/: Dockerfile  README.rst  packages.yaml
docker/pism/: CMakeLists.txt  Dockerfile  pism.sh
package/: CMakeLists.txt
src/: CMakeLists.txt  Makefile  README.md  SConscript  beddefLC.cc  cubature.h  exactTestH.c  exactTestI.c  exactTestI.h  exactTestsABCDE.c  exactTestsABCDE.h  exactTestsBCD.c  exactTestsBCD.cc  exactTestsBCD.h  exactTestsBCD.hh  exactTestsFG.c  exactTestsFG.cc  exactTestsFG.h  exactTestsFG.hh  extrasGSL.cc  extrasGSL.hh  flowTable.cc  forcing.cc  forcing.hh  get_drag.cc  greenland.cc  grid.cc  grid.hh  iCMthermo.cc  iMIO.cc  iMIOnetcdf.cc  iMbasal.cc  iMbeddef.cc  iMdefaults.cc  iMgrainsize.cc  iMlegacy.cc  iMmacayeal.cc  iMoptions.cc  iMpdd.cc  iMregrid.cc  (+57 more)
test/: CMakeLists.txt  README.mpiverifynow  README.verifynow  age_model.py  ant.sh  antNC.py  antNC.sh  array_forcing.py  bed_deformation.py  bed_deformation_restart.py  bed_smoother.py  beddef_iso.py  beddef_lc.py  beddef_lc_elastic.py  beddef_lc_restart.py  bedrock_column.py  blatter.py  blatter_flowline.py  blatter_verification.py  config_test.py  eis2Iplastic.sh  eis2plastic.sh  eis_core.py  eis_green.py  eis_ross.py  energy_model.py  enthalpy.py  enthalpy_converter.py  fill_missing.py  grounded_cell_fraction.py  heinocatdat.sh  icemodelvec2t.py  ltop.py  mass_spreading.py  mass_transport.py  miscellaneous.py  mpiverifynow.sh  netcdf.m  node_types.py  nosetests.py  (+24 more)
(+3621 files in other folders)
